# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata 
# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"policy" = "rise_policy"

[tool.black]
line-length = 100

[project]
name = "rise"
version = "0.0.1"
authors = [{ name = "Eugenio Chisari", email = "eugenio.chisari@gmail.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "easydict==1.13",
    "opencv-python==4.9.0.80",
]


[project.optional-dependencies]
dev = []
